[package]
name = "dracut-install"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[dependencies]
#getopts = "0"
byteorder = "1.3.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.6"
bitflags = "1.0.4"
itertools = "0.8.0"
#kmod = "0.3.1"
chainerror = "0.4.3"
libc = "0.2.48"
rayon = "1.0.3"

[dev-dependencies]
tempfile = "3.0.7"

[features]
bench = []

[[bench]]
name = "usrbin"
required-features = [ "bench" ]
