[package]
name = "dracut-install"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[dependencies]
clap = "2"
byteorder = "1.3.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.6"
bitflags = "1.0.4"
itertools = "0.8.0"
kmod2 = { version = "0.3.2", path = "./kmod" }
chainerror = "0.4.3"
libc = "0.2.48"
rayon = "1.0.3"
hashbrown = { version = "0.1.8", features = ["rayon"] }
bstr = "0.1.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
walkdir = "2.2.7"
regex = "1.1.9"

[dev-dependencies]
tempfile = "3.0.7"

[features]
bench = []

[[bench]]
name = "benches"
required-features = [ "bench" ]

[workspace]
members = [ "kmod" ]