[package]
name = "dracut-install"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
byteorder = "1.3.2"
enum-primitive-derive = "0.2.1"
num-traits = "0.2.8"
bitflags = "1.2.1"
itertools = "0.9.0"
kmod = { version = "0.4", path = "./kmod" }
chainerror = "0.5.0"
libc = "0.2.65"
rayon = "1.2.0"
hashbrown = { version = "0.7.0", features = ["rayon"] }
bstr = "0.2.8"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
walkdir = "2.2.9"
regex = "1.3.1"

[dev-dependencies]
tempfile = "3.1.0"

[features]
bench = []

[[bench]]
name = "benches"
required-features = [ "bench" ]

[workspace]
members = [ "kmod" ]
