[package]
name = "kmod2"
version = "0.3.2"
description = "Bindings to libkmod to manage linux kernel modules"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/kmod-rs"
categories = ["api-bindings"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/kmod-rs" }

[dependencies]
error-chain = "0.12"
log = "0.4"
errno = "0.2"
reduce = "0.1"
kmod-sys = { version = "0.1.2" }

[dev-dependencies]
env_logger = "0.6"
