[package]
name = "kmod"
version = "0.4.0"
description = "Bindings to libkmod to manage linux kernel modules"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/kmod-rs"
categories = ["api-bindings"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/kmod-rs" }

[dependencies]
chainerror = "0.7"
log = "0.4.8"
errno = "0.2.4"
kmod-sys = "0.1.2"

[dev-dependencies]
env_logger = "0.10.0"
